ci: update gh actions scripts

--- a/.github/workflows/build-beta.yml
+++ b/.github/workflows/build-beta.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     strategy:
+      fail-fast: false
       matrix:
         os: [macos-11, ubuntu-latest, windows-latest]
 
