refactor(Flatpak): temporarily disable import/export feature

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,8 @@
       "translation",
       "Linux",
       "MacOS",
-      "deps"
+      "deps",
+      "Flatpak"
    ],
    "svg.preview.background": "transparent"
 }
