--- a/package.json
+++ b/package.json
@@ -126,7 +126,7 @@
     "@turf/helpers": "~6.5.0",
     "@vueuse/core": "~10.4.1",
     "ace-builds": "~1.24.1",
-    "better-sqlite3": "~9.1.1",
+    "better-sqlite3": "^8.0.1",
     "electron-log": "~5.0.1",
     "electron-store": "~8.1.0",
     "electron-updater": "~4.6.5",
