--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "lint": "eslint . --ext .js,.ts,.vue && stylelint \"./src/**/*.{css,scss,sass,vue}\"",
     "lint:fix": "eslint . --ext .js,.ts,.vue --fix && stylelint \"./src/**/*.{css,scss,sass,vue}\" --fix",
     "contributors:add": "all-contributors add",
-    "contributors:generate": "all-contributors generate"
+    "contributors:generate": "all-contributors generate",
+    "prepare": "husky"
   },
   "author": "Fabio Di Stasio <info@fabiodistasio.it>",
   "main": "./dist/main.js",
@@ -179,6 +180,8 @@
     "@babel/eslint-parser": "~7.15.7",
     "@babel/preset-env": "~7.15.8",
     "@babel/preset-typescript": "~7.16.7",
+    "@commitlint/cli": "~19.0.3",
+    "@commitlint/config-conventional": "~19.0.3",
     "@playwright/test": "~1.28.1",
     "@types/better-sqlite3": "~7.5.0",
     "@types/leaflet": "~1.7.9",
@@ -198,6 +201,7 @@
     "eslint-plugin-promise": "~5.2.0",
     "eslint-plugin-simple-import-sort": "~10.0.0",
     "eslint-plugin-vue": "~8.0.3",
+    "husky": "~9.0.11",
     "playwright": "~1.28.1",
     "playwright-core": "~1.28.1",
     "standard-version": "~9.3.1",
