ci: temporary disabled auto test e2e

--- a/.github/workflows/test-e2e-win.yml
+++ b/.github/workflows/test-e2e-win.yml
@@ -1,9 +1,10 @@
 name: Test end-to-end
 
 on: 
-  push:
-    branches:
-        - develop
+  workflow_dispatch: {}
+  # push:
+  #   branches:
+  #       - develop
 
 jobs:
   release:
