ci: fix macos build actions

--- a/.github/workflows/build-beta.yml
+++ b/.github/workflows/build-beta.yml
@@ -29,7 +29,9 @@ jobs:
           node-version: 20
       
       - name: Install dependencies
-        run: npm i
+        run: | 
+          npm i
+          npm install "dmg-license" --save-optional
         
       - name: "Build"
         run: npm run build
