--- a/.github/workflows/create-artifact-macos.yml
+++ b/.github/workflows/create-artifact-macos.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
-          name: macos-build-develop
+          name: macos-build-beta
           retention-days: 3
           path: |
             build
