--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "babel-loader": "~8.2.3",
     "better-sqlite3": "~10.0.0",
     "chalk": "~4.1.2",
+    "ciaplu": "^2.2.0",
     "cpu-features": "^0.0.10",
     "cross-env": "~7.0.2",
     "css-loader": "~6.5.0",
