--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "cpu-features": "^0.0.10",
     "cross-env": "~7.0.2",
     "css-loader": "~6.5.0",
+    "dmg-license": "^1.0.11",
     "electron-log": "~5.0.1",
     "electron-store": "~8.1.0",
     "electron-updater": "~4.6.5",
