--- a/package.json
+++ b/package.json
@@ -135,7 +135,6 @@
     "cpu-features": "^0.0.10",
     "cross-env": "~7.0.2",
     "css-loader": "~6.5.0",
-    "dmg-license": "^1.0.11",
     "electron-log": "~5.0.1",
     "electron-store": "~8.1.0",
     "electron-updater": "~4.6.5",
@@ -215,5 +214,8 @@
     "vue-eslint-parser": "~8.3.0",
     "webpack-dev-server": "~4.11.1",
     "xvfb-maybe": "~0.2.1"
+  },
+  "optionalDependencies": {
+    "dmg-license": "~1.0.11"
   }
 }
